ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: murmur-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: murmur-backend-svc
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: murmur-frontend-svc
                port:
                  number: 80
